(library (name time_now) (public_name time_now)
 (libraries base jane-street-headers) (preprocess (pps ppx_base ppx_optcomp))
 (preprocessor_deps config.h) (c_names time_now_stubs)
 (c_library_flags (:include rt-flags))
 (js_of_ocaml (javascript_files runtime.js)))

(rule (targets config.h rt-flags) (deps)
 (action
  (progn (copy %{lib:jst-config:config.h} config.h)
   (copy %{lib:jst-config:rt-flags} rt-flags))))