(library
 (foreign_stubs
  (language c)
  (names time_now_stubs)
  (flags -std=c11 -fPIC))
 (name time_now)
 (public_name time_now)
 (libraries base jane-street-headers)
 (preprocess
  (pps ppx_base ppx_optcomp))
 (preprocessor_deps config.h)
 (js_of_ocaml
  (javascript_files runtime.js)))

(rule
 (targets config.h)
 (deps)
 (action
  (copy %{lib:jst-config:config.h} config.h)))
